# label-studio-schema

./: README.md  pyproject.toml
ls-files/: Readme.md
src/label_studio_schema/: __init__.py  base.py  control.py  object.py  visual.py
src/label_studio_schema/tools/: __init__.py  convert.py  format.py  parse.py
